--- a/src/app/start-screen/start-screen.component.html
+++ b/src/app/start-screen/start-screen.component.html
@@ -1,6 +1,6 @@
 <section class="start-screen">
     <img src="assets/img/startbox.png" alt="start-box">
     <div class="start-label-box">
-        <img src="assets/img/label2.png" alt="label gold">
+        <img (click)="newGame()" src="assets/img/label2.png" alt="label gold">
     </div>
 </section>
