--- a/src/app/start-screen/start-screen.component.scss
+++ b/src/app/start-screen/start-screen.component.scss
@@ -16,11 +16,16 @@
     position: absolute;
     left: 0;
     right: 0;
-    bottom: 50px;
+    bottom: 100px;
     display: flex;
     justify-content: center;
     img {
         width: 40vw;
         height: auto;
+
+        &:hover {
+            filter: brightness(1.25);
+            cursor: pointer;
+        }
     }
 }
