--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,8 +1,11 @@
 <section class="field">
+
+
+
+
   <div class="card-stack">
-    <img *ngFor="let c of [1,2,3,4,5]; let i = index"
-         [ngStyle]="{ left: (i * 5) + 'px' }"
-         src="/assets/img/cards/card_cover.png"
-         alt="Card Cover">
+    <img *ngFor="let c of [0,1,2,3]; let i = index" [ngStyle]="{ right: (i * 5) + 'px' }"
+      src="/assets/img/cards/card_cover.png" alt="Card Cover">
+    <img (click)="takeCard()" [class.pick-card]="pickCardAnimation" class="top-card" style="right: 25px;" src="/assets/img/cards/card_cover.png" alt="Card Cover">
   </div>
 </section>
