--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -21,3 +21,20 @@
     width: 150px;
   }
 }
+
+.top-card {
+  cursor: pointer;
+
+  transition: all 125ms ease-in-out;
+
+
+  &:hover {
+    transform: scale(1.1) translateY(-10px);
+  }
+}
+
+.pick-card {
+  transition: all 125ms ease-in-out;
+  transform: scale(1.5) !important; 
+  //animation: pickCardAnim 0.5s forwards;
+}
