--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -6,6 +6,9 @@
   <div class="card-stack">
     <img *ngFor="let c of [0,1,2,3]; let i = index" [ngStyle]="{ right: (i * 5) + 'px' }"
       src="/assets/img/cards/card_cover.png" alt="Card Cover">
-    <img (click)="takeCard()" [class.pick-card]="pickCardAnimation" class="top-card" style="right: 25px;" src="/assets/img/cards/card_cover.png" alt="Card Cover">
+    <img (click)="takeCard()" class="top-card" style="right: 25px;"
+      src="/assets/img/cards/card_cover.png" alt="Card Cover">
+    <img (click)="takeCard()" *ngIf="pickCardAnimation" class="pick-card" style="right: 25px;"
+      src="/assets/img/cards/ace_1.png" alt="ace 1">
   </div>
 </section>
