--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -12,12 +12,12 @@
 
 .card-stack {
   position: relative;
-  width: 200px; 
+  width: 200px;
   height: 300px;
   img {
     position: absolute;
     top: 0;
-    transition: 0.2s;
+
     width: 150px;
   }
 }
@@ -27,14 +27,26 @@
 
   transition: all 125ms ease-in-out;
 
-
   &:hover {
     transform: scale(1.1) translateY(-10px);
   }
 }
 
 .pick-card {
-  transition: all 125ms ease-in-out;
-  transform: scale(1.5) !important; 
-  //animation: pickCardAnim 0.5s forwards;
+  animation: pick-card-animation 1s ease-in-out;
+  transform: scale(1.3) translateX(140px) translateY(-180px) rotate(10deg);
+}
+@keyframes pick-card-animation {
+  0% {
+    transform: scale(1);
+  }
+  40% {
+    transform: scale(1.7);
+  }
+  60% {
+    transform: scale(1.7);
+  }
+  100% {
+    transform: scale(1.3) translateX(140px) translateY(-180px) rotate(10deg);
+  }
 }
