--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,14 +1,29 @@
 <section class="field">
-
-
-
-
   <div class="card-stack">
-    <img *ngFor="let c of [0,1,2,3]; let i = index" [ngStyle]="{ right: (i * 5) + 'px' }"
-      src="/assets/img/cards/card_cover.png" alt="Card Cover">
-    <img (click)="takeCard()" class="top-card" style="right: 25px;"
-      src="/assets/img/cards/card_cover.png" alt="Card Cover">
-    <img (click)="takeCard()" *ngIf="pickCardAnimation" class="pick-card" style="right: 25px;"
-      src="/assets/img/cards/ace_1.png" alt="ace 1">
+    
+    <!-- Karten im Stapel -->
+    <img 
+      *ngFor="let c of [0,1,2,3,4]; let i = index"
+      class="stack-card"
+      [style.right.px]="i * 5"
+      src="assets/img/cards/card_cover.png"
+      alt="Card Cover"
+    />
+
+    <!-- Obere Karte / zum Ziehen -->
+    <img
+      (click)="takeCard()"
+      class="top-card"
+      src="assets/img/cards/card_cover.png"
+      alt="Top Card"
+    />
+
+    <!-- Animierte Karte beim Ziehen -->
+    <img
+      *ngIf="pickCardAnimation"
+      class="pick-card"
+      src="assets/img/cards/ace_1.png"
+      alt="Ace"
+    />
   </div>
 </section>
