08 - Richtige Karte anzeigen

--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -22,7 +22,7 @@
     <img
       *ngIf="pickCardAnimation"
       class="pick-card"
-      src="assets/img/cards/ace_1.png"
+      src="assets/img/cards/{{ currentCard }}.png"
       alt="Ace"
     />
   </div>
