10 - Design der Mitspielerleiste

--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -73,3 +73,8 @@
     transform: scale(1.2) translate(140px, -230px) rotate(10deg);
   }
 }
+
+.player-position {
+  position: absolute;
+  right: 0;
+}
