--- a/src/app/player/player.component.html
+++ b/src/app/player/player.component.html
@@ -1,1 +1,4 @@
-<p>player works!</p>
+<div class="player">
+    <img src="/assets/img/profile/death.png" alt="player death">
+    <span>Name</span>
+</div>
