--- a/src/app/player/player.component.html
+++ b/src/app/player/player.component.html
@@ -1,4 +1,4 @@
 <div class="player">
     <img src="/assets/img/profile/death.png" alt="player death">
-    <span>Name</span>
+    <span>{{ name }}</span>
 </div>
