--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,5 +1,4 @@
-<app-player *ngFor="let player of game.players; let i = index" [ngStyle]="{'top.px': 100 + (i * 120)}"
-    [name]="player"
+<app-player *ngFor="let player of game.players; let i = index" [ngStyle]="{'top.px': 100 + (i * 120)}" [name]="player"
   class="player-position"></app-player>
 
 <section class="field">
@@ -21,3 +20,7 @@
       alt="Picked Card" />
   </div>
 </section>
+
+<button mat-fab color="primary" class="add-player-button">
+  <mat-icon>add</mat-icon>
+</button>
