dialog add player added

--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -21,6 +21,7 @@
   </div>
 </section>
 
-<button mat-fab color="primary" class="add-player-button">
+<button mat-fab color="primary" class="add-player-button" (click)="openAddPlayerDialog()">
   <mat-icon>add</mat-icon>
 </button>
+
