14 - Material Design Dialog erstellen

--- a/src/app/dialog-add-player/dialog-add-player.component.html
+++ b/src/app/dialog-add-player/dialog-add-player.component.html
@@ -1,7 +1,7 @@
 <h2 mat-dialog-title>Add new Player</h2>
 
 <mat-dialog-content>
-  <p>Please enter the player's name:</p>
+  <p>Please enter the player's name</p>
 
   <mat-form-field appearance="outline" style="width: 100%;">
     <mat-label>Player Name</mat-label>
