--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,4 +1,6 @@
-<app-player *ngFor="let player of game.players; let i = index" [ngStyle]="{'top.px': 100 + (i * 120)}" [name]="player"
+<app-player *ngFor="let player of game.players; let i = index" [ngStyle]="{'top.px': 100 + (i * 90)}" 
+[playerActive]="i == game.currentPlayer"
+[name]="player"
   class="player-position"></app-player>
 
 <section class="field">
@@ -24,4 +26,3 @@
 <button mat-fab color="primary" class="add-player-button" (click)="openAddPlayerDialog()">
   <mat-icon>add</mat-icon>
 </button>
-
