--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,8 +1,9 @@
-<app-player *ngFor="let player of game.players; let i = index" [ngStyle]="{'top.px': 100 + (i * 90)}" 
-[playerActive]="i == game.currentPlayer"
-[name]="player"
-  class="player-position"></app-player>
+<!-- PLAYER -->
+<app-player *ngFor="let player of game.players; let i = index" [ngStyle]="{'top.px': 100 + (i * 90)}"
+  [playerActive]="i == game.currentPlayer" [name]="player" class="player-position">
+</app-player>
 
+<!-- GAME FIELD -->
 <section class="field">
   <div class="card-stack">
 
@@ -17,12 +18,18 @@
     <img *ngFor="let card of game.playedCard" class="played-card" [src]="'assets/img/cards/' + card + '.png'"
       alt="Discard Pile Top Card" />
 
-    <!-- Animierte Karte beim Ziehen -->
+    <!-- Animierte Karte -->
     <img *ngIf="pickCardAnimation" class="pick-card" [src]="'assets/img/cards/' + currentCard + '.png'"
       alt="Picked Card" />
   </div>
 </section>
 
+<!-- GAME INFO -->
+<div class="game-info-wrapper">
+  <app-game-info></app-game-info>
+</div>
+
+<!-- ADD PLAYER BUTTON -->
 <button mat-fab color="primary" class="add-player-button" (click)="openAddPlayerDialog()">
   <mat-icon>add</mat-icon>
 </button>
