--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -26,7 +26,7 @@
 
 <!-- GAME INFO -->
 <div class="game-info-wrapper">
-  <app-game-info></app-game-info>
+  <app-game-info [card]="currentCard"></app-game-info>
 </div>
 
 <!-- ADD PLAYER BUTTON -->
