--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -2,7 +2,7 @@
   width: 100vw;
   height: 100vh;
   max-width: 100%;
-  background-image: url("assets/img/board3.jpg");
+  background-image: url("../../assets/img/board3.jpg");
   background-size: cover;
   background-position: center;
   display: flex;
