--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,7 +1,13 @@
 <!-- PLAYER -->
-<app-player *ngFor="let player of game.players; let i = index" [ngStyle]="{'top.px': 100 + (i * 90)}"
-  [playerActive]="i == game.currentPlayer" [name]="player" class="player-position">
+<app-player
+  *ngFor="let p of game.players; let i = index"
+  class="player-position"
+  [ngStyle]="{ 'top.px': 100 + (i * 90) }"
+  [playerActive]="i === game.currentPlayer"
+  [name]="p.name"
+  [avatar]="p.avatar">
 </app-player>
+
 
 <!-- GAME FIELD -->
 <section class="field">
