--- a/src/app/player/player.component.html
+++ b/src/app/player/player.component.html
@@ -1,4 +1,13 @@
-<div class="player" [class.player-active]="playerActive">
-    <img [src]="avatarSrc" [alt]="'player ' + name" />
+<div class="player" [class.player-active]="playerActive" [class.compact]="compact">
+  <img [src]="avatarSrc" [alt]="name" />
+
+  <!-- Name nur im Desktop Mode -->
+  @if (!compact) {
     <span class="name">{{ name }}</span>
+  }
+
+  <!-- Optional: Initiale im Compact (wenn du willst) -->
+  @if (compact) {
+    <span class="initials">{{ initials }}</span>
+  }
 </div>
