--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,21 @@
 body {
-    margin: 0;
-
+  margin: 0;
 }
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+.game-dialog .mat-mdc-dialog-surface {
+  border-radius: 18px;
+  overflow: hidden; 
+}
+
+.game-dialog .mat-mdc-dialog-content {
+  overflow: hidden !important; 
+  max-height: none !important;
+}
