--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -42,7 +42,7 @@
 
       <!-- Animierte Karte -->
       <img
-        *ngIf="game.pickCardAnimation"
+        *ngIf="pickCardAnimation"
         class="pick-card"
         [src]="'assets/img/cards/' + game.currentCard + '.png'"
         alt="Picked Card"
