--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -75,8 +75,9 @@
 .pick-card {
   right: 25px;
   z-index: 20;
-  animation: pick-card-animation 900ms ease-in-out forwards;
+  animation: pick-card-animation var(--pick-ms, 900ms) ease-in-out forwards;
 }
+
 
 @keyframes pick-card-animation {
   0% {
