--- a/src/app/dialog-edit-player/dialog-edit-player.component.scss
+++ b/src/app/dialog-edit-player/dialog-edit-player.component.scss
@@ -55,6 +55,11 @@ input {
 .actions {
   display: flex;
   justify-content: flex-end;
+  align-items: center;
   gap: 12px;
   margin-top: 20px;
+}
+
+.spacer {
+  flex: 1;
 }
